Fix item spacing and background on smartphone

--- a/react/src/components/Carousel.module.css
+++ b/react/src/components/Carousel.module.css
@@ -2,31 +2,25 @@
     #mainBox {
         /* UI Properties */
         background: transparent url('../icons/smartphone/BG.png') 0% 0% no-repeat padding-box;
-        background-position: center;
+        background-position: center 5%;
     }
 
     #container {
         /* Self Layout Properties */
-        padding: 170px 0 40px 0;
+        padding: 40px 0;
         margin: 0 auto;
         width: 93.75%;
-        height: 1691px;
-
-        /* Content Layout Properties */
-        display: flex;
-        flex-wrap: wrap;
-        align-content: space-between;
     }
 
     #topPhotoContainer {
         /* Self Layout Properties */
-        height: 21.5%;
+        margin-bottom: 40px;
 
         /* Content Layout Properties */
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        align-content: space-between;
+        row-gap: 20px;
     }
 
     .topPhotoBox {
@@ -35,8 +29,9 @@
         padding: 20px 10px 10px 10px;
     }
 
-    .topPhotoBox img {
+    .topPhotoPhone {
         /* Self Layout Properties */
+        display: block;
         width: 120px;
     }
 
@@ -101,6 +96,7 @@
 
     #bottomPhotoContainer {
         /* Self Layout Properties */
+        margin-bottom: 40px;
         height: 650px;
         width: 100%;
 
